@@ -23,6 +23,8 @@
 - API Change: removed JGLFW backend
 - Fixed mixed up use of TexturePacker.Settings.stripWhitespaceX|Y.
 - Added joystick POV support to LWJGL3 controller backend.
+- API Addition: Billboard particles' scaling can be defined with different X and Y values.
+- API Addition: Billboard particles can now be aligned with the projected 2D motion on the screen.
 
 [1.9.6]
 - Fix performance regression in LWJGL3 backend, use java.nio instead of BufferUtils. Those are intrinsics and quite a bit faster than BufferUtils on HotSpot.
